config/beam-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: beam-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - api.usebeam.app
    secretName: beam-tls

  rules:
  - host: api.usebeam.app
    http:
      paths:
      - backend:
          serviceName: beam-backend-svc
          servicePort: 80
